-- Enable UUID extension
CREATE EXTENSION IF NOT EXISTS "uuid-ossp";

-- COMPANIES: Represents logistics providers joining the network
CREATE TABLE companies (
    id UUID PRIMARY KEY DEFAULT uuid_generate_v4(),
    name TEXT NOT NULL,
    country TEXT NOT NULL,
    fleet_size INTEGER DEFAULT 0,
    reputation_score FLOAT DEFAULT 5.0,
    created_at TIMESTAMPTZ DEFAULT NOW(),
    updated_at TIMESTAMPTZ DEFAULT NOW()
);

COMMENT ON TABLE companies IS 'Logistics companies participating in the network';

-- FLEETS: Individual trucks/vehicles owned by companies
CREATE TABLE fleets (
    id UUID PRIMARY KEY DEFAULT uuid_generate_v4(),
    company_id UUID NOT NULL REFERENCES companies(id) ON DELETE CASCADE,
    vehicle_type TEXT NOT NULL, -- e.g., 'Tautliner', 'Refrigerated'
    capacity_tons FLOAT NOT NULL,
    current_location_lat FLOAT,
    current_location_lng FLOAT,
    status TEXT NOT NULL DEFAULT 'IDLE', -- 'IDLE', 'IN_TRANSIT', 'ASSIGNED'
    available_from TIMESTAMPTZ DEFAULT NOW(),
    created_at TIMESTAMPTZ DEFAULT NOW(),
    updated_at TIMESTAMPTZ DEFAULT NOW()
);

COMMENT ON TABLE fleets IS 'Trucks and vehicles available for load matching';

-- LOADS: Shipments that need to be transported
CREATE TABLE loads (
    id UUID PRIMARY KEY DEFAULT uuid_generate_v4(),
    company_id UUID NOT NULL REFERENCES companies(id) ON DELETE CASCADE, -- The shipper
    origin_lat FLOAT NOT NULL,
    origin_lng FLOAT NOT NULL,
    destination_lat FLOAT NOT NULL,
    destination_lng FLOAT NOT NULL,
    weight_tons FLOAT NOT NULL,
    deadline TIMESTAMPTZ NOT NULL,
    status TEXT NOT NULL DEFAULT 'PENDING', -- 'PENDING', 'MATCHED', 'DELIVERED', 'CANCELLED'
    price_offered FLOAT,
    created_at TIMESTAMPTZ DEFAULT NOW(),
    updated_at TIMESTAMPTZ DEFAULT NOW()
);

COMMENT ON TABLE loads IS 'Freight loads requiring transportation';

-- ROUTES: Simulation results for potential routes
CREATE TABLE routes (
    id UUID PRIMARY KEY DEFAULT uuid_generate_v4(),
    company_id UUID NOT NULL REFERENCES companies(id) ON DELETE CASCADE,
    origin TEXT NOT NULL,
    destination TEXT NOT NULL,
    simulation_status TEXT DEFAULT 'DRAFT', -- 'DRAFT', 'RUNNING', 'COMPLETED'
    profitability_score FLOAT,
    data_json JSONB DEFAULT '{}'::jsonb, -- Stores full simulation report
    created_at TIMESTAMPTZ DEFAULT NOW(),
    updated_at TIMESTAMPTZ DEFAULT NOW()
);

COMMENT ON TABLE routes IS 'Route simulation data generated by RouteForge agent';

-- AGENT_MESSAGES: Communication log between AI agents
CREATE TABLE agent_messages (
    id UUID PRIMARY KEY DEFAULT uuid_generate_v4(),
    sender_id UUID, -- Can be NULL if system message, or company_id
    receiver_id UUID, -- Can be NULL for broadcast
    sender_agent_type TEXT NOT NULL, -- 'FLEET_AGENT', 'LOAD_AGENT', etc.
    receiver_agent_type TEXT NOT NULL,
    message_type TEXT NOT NULL, -- 'OFFER', 'ACCEPT', 'REJECT', etc.
    payload_json JSONB NOT NULL DEFAULT '{}'::jsonb,
    conversation_id UUID,
    timestamp TIMESTAMPTZ DEFAULT NOW()
);

COMMENT ON TABLE agent_messages IS 'Immutable log of all agent-to-agent communications';

-- TRANSACTIONS: Finalized deals between companies
CREATE TABLE transactions (
    id UUID PRIMARY KEY DEFAULT uuid_generate_v4(),
    load_id UUID NOT NULL REFERENCES loads(id),
    fleet_id UUID NOT NULL REFERENCES fleets(id),
    carrier_company_id UUID NOT NULL REFERENCES companies(id),
    shipper_company_id UUID NOT NULL REFERENCES companies(id),
    final_price FLOAT NOT NULL,
    status TEXT NOT NULL DEFAULT 'PENDING', -- 'PENDING', 'COMPLETED', 'DISPUTED'
    created_at TIMESTAMPTZ DEFAULT NOW(),
    updated_at TIMESTAMPTZ DEFAULT NOW()
);

COMMENT ON TABLE transactions IS 'Financial record of matched loads and fleets';

-- AGENT_STATES: Persistence layer for LangGraph agents
CREATE TABLE agent_states (
    id UUID PRIMARY KEY DEFAULT uuid_generate_v4(),
    agent_type TEXT NOT NULL,
    company_id UUID NOT NULL REFERENCES companies(id) ON DELETE CASCADE,
    state_json JSONB NOT NULL DEFAULT '{}'::jsonb, -- Stores the entire graph state
    last_updated TIMESTAMPTZ DEFAULT NOW()
);

COMMENT ON TABLE agent_states IS 'Current state of each running agent for checkpointing';
